@@ -38,6 +38,8 @@ add-to-favorites=Add to favorites
 back-to=Back to __1__\nRight-click to go home
 blueprint-not-available=A blueprint is not available for this crafter.
 click-to-get-blueprint=Click to get a blueprint.
+click-to-view-technology=Click to view on technology screen.
+click-to-view=Click to view details.
 close-quick-reference=Close quick reference panel
 crafter=Crafter
 crafting-time=Crafting time:
@@ -72,7 +74,6 @@ search-by=Search by:
 search=Search
 seconds-tooltip=The amount of time the recipe will take in a crafter with no modules and a crafting speed of exactly 1.0.
 seconds=__1__ seconds
-# seconds=__1__ __plural_for_parameter_1_{1=second|rest=seconds}__
 settings=Settings
 technology=Technology
 unlocked-by=Unlocked by (__1__)
